--- a/FibonacciSphere/MainPage.xaml
+++ b/FibonacciSphere/MainPage.xaml
@@ -2,7 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:FibonacciSphere"
-      xmlns:skia="using:SkiaSharp.Views.Windows"
+      xmlns:controls="using:FibonacciSphere.Controls"
       xmlns:utu="using:Uno.Toolkit.UI"
       Background="{ThemeResource BackgroundPrimaryBrush}">
 
@@ -18,8 +18,7 @@
 
         <!-- Render Canvas -->
         <Grid Grid.Column="0" Background="{ThemeResource SurfaceContainerLowBrush}">
-            <skia:SKXamlCanvas x:Name="Canvas"
-                               PaintSurface="OnPaintSurface"
+            <controls:SphereCanvasElement x:Name="Canvas"
                                PointerPressed="OnPointerPressed"
                                PointerMoved="OnPointerMoved"
                                PointerReleased="OnPointerReleased"
